--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,7 +11,7 @@
     <title>思绪思维导图</title>
     <script>
       // 自定义静态资源的路径
-      window.externalPublicPath = 'app://./'
+      window.externalPublicPath = './'
       // 接管应用
       window.takeOverApp = false
     </script>
